--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="icon" type="image/x-icon" href="./main.png">
 </head>
 
 <body>
@@ -18,13 +19,13 @@
     </div>
     <div class="two">
       <p class="p1">FIverr Pro</p>
-      <img src="./chevron-down.svg" alt="" />
+      <img src="./images/" alt="" />
       <p class="p2">Explore</p>
       <img src="./chevron-down.svg" alt="" />
     </div>
     <div class="three">
       <img class="global" src="./globe2.svg" alt="" />
-      <p class="p3">EnglIah</p>
+      <p class="p3">English</p>
       <p class="p4">Become a Seller</p>
     </div>
     <div class="four">
@@ -32,10 +33,227 @@
       <button class="b2" type="button">JoIn</button>
     </div>
   </header>
-  <section>
+  <section class="im">
     <div class="bg-img">
       <div class="text-aria">
         <input style="border-radius: 12px; border-color: rgb(255, 255, 255)" type="text"
           placeholder="Search for any service..." size="76px" />
         <button type="submit"><i class="fa fa-search"></i></button>
       </div>
+    </div>
+  </section>
+  <section class="boxes">
+    <div class="boxs">
+      <div class="box">
+        <div class="imge">
+          <img src="./programming-tech-thin.56382a2.svg" alt="">
+        </div>
+        <div class="txt">
+          <p>programming <br> & Tech</p>
+        </div>
+      </div>
+      <div class="box">
+        <div class="imge">
+          <img src="./graphics-design-thin.ff38893.svg" alt="">
+        </div>
+        <div class="txt">
+          <p>Graphics&<br> Designing</p>
+        </div>
+      </div>
+      <div class="box">
+        <div class="imge">
+          <img src="./digital-marketing-thin.68edb44.svg" alt="">
+        </div>
+        <div class="txt">
+          <p>Digital<br> Marketing</p>
+        </div>
+      </div>
+      <div class="box">
+        <div class="imge">
+          <img src="./writing-translation-thin.fd3699b.svg" alt="">
+        </div>
+        <div class="txt">
+          <p>Writting & <br> Translation</p>
+        </div>
+      </div>
+      <div class="box">
+        <div class="imge">
+          <img src="./video-animation-thin.9d3f24d.svg" alt="">
+        </div>
+        <div class="txt">
+          <p>Video & <br> Animation</p>
+        </div>
+      </div>
+      <div class="box">
+        <div class="imge">
+          <img src="./ai-services-thin.104f389.svg" alt="">
+        </div>
+        <div class="txt">
+          <p>AI Services</p>
+        </div>
+      </div>
+      <div class="box">
+        <div class="imge">
+          <img src="./music-audio-thin.43a9801.svg" alt="">
+        </div>
+        <div class="txt">
+          <p>Music& <br> Audio</p>
+        </div>
+      </div>
+      <div class="box">
+        <div class="imge">
+          <img src="./business-thin.885e68e.svg" alt="">
+        </div>
+        <div class="txt">
+          <p>Business</p>
+        </div>
+      </div>
+      <div class="box">
+        <div class="imge">
+          <img src="./consulting-thin.d5547ff.svg" alt="">
+        </div>
+        <div class="txt">
+          <p>consulting</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="boxis">
+    <h2 class="he">Popular services</h2>
+    <div class="secont-box">
+      <div class="box2">
+        <p>WebsIte Devlopment <br /><br /></p>
+        <img src="./card-1.webp" alt="" style="border-radius: 10px" />
+      </div>
+
+      <div class="box2">
+        <p>Logo Design <br /><br /><br /></p>
+        <img src="logo-design.webp" alt="" style="border-radius: 10px" />
+      </div>
+
+      <div class="box2">
+        <p>
+          SEO <br /><br />
+          <br />
+        </p>
+        <img src="./seo.webp" alt="" style="border-radius: 10px" />
+      </div>
+
+      <div class="box2">
+        <p>ArchItecture & Interlor DesIgn <br /><br /></p>
+        <img src="./architecture-design.webp" alt="" style="border-radius: 10px" />
+      </div>
+
+      <div class="box2">
+        <p>SocIal MedIa MarketIng <br /><br /></p>
+        <img src="./social-media-marketing.webp" alt="" style="border-radius: 10px" />
+      </div>
+
+      <div class="box2">
+        <p>
+          VoIce Over <br /><br />
+          <br />
+        </p>
+        <img src="./voice-over.webp" alt="" style="border-radius: 10px" />
+      </div>
+
+      <div class="box2">
+        <p>Softwere Devlopment <br /><br /></p>
+        <img src="./software-development.webp" alt="" style="border-radius: 10px" />
+      </div>
+    </div>
+  </section>
+  <section class="pro">
+    <div class="secound-colum">
+      <div class="first-row">
+        <img class="fiver-pro" src="./FiverrPro..png" alt="" />
+        <h1 class="first-row-first-heading">
+          The premium freelance solution for businesses
+        </h1>
+        <div class="boxes">
+          <img class="boxes-tick-mark" src="./patch-check-fill.svg" alt="">
+          <h3 class="boxes-h">Dedicated hiring experts <br><br></h3>
+          <p class="boxes-p">Count on an account manager to find you the right talent and see to your project’s every need.</p>
+        </div>
+        <div class="boxes">
+          <img class="boxes-tick-mark" src="./patch-check-fill.svg" alt="">
+          <h3 class="boxes-h">Satisfaction guarantee <br><br></h3>
+          <p class="boxes-p">Order confidently, with guaranteed refunds for less-than-satisfactory deliveries.</p>
+        </div>
+        <br>
+        <br>
+        <div class="boxes">
+          <img class="boxes-tick-mark" src="./patch-check-fill.svg" alt="">
+          <h3 class="boxes-h">Advanced management tools</h3>
+          <p class="boxes-p">Seamlessly integrate freelancers into your team and projects.</p>
+        </div>
+        <div class="boxes">
+          <img class="boxes-tick-mark" src="./patch-check-fill.svg" alt="">
+          <h3 class="boxes-h">Flexible payment models <br><br></h3>
+          <p class="boxes-p">Pay per project or opt for hourly rates to facilitate longer-term collaboration.</p>
+        </div>
+        <button class="try-now" type="button">Try Now</button>
+      </div>
+      <div class="second-row">
+        <img class="fiverr-pro" src="./fiverr-pro.webp" alt="" />
+      </div>
+  </section>
+  <section class="video">
+    <div class="vid">
+      <h1 class="what-success">What success on Fiverr looks like</h1>
+      <p class="vontelle-eyewear">Vontélle Eyewear turns to Fiverr freelancers to bring their vision to life.</p>
+      
+      <div class="for-all">
+      <video class="video-how-fiverr-word" width="100" controls>
+        <source src="./How Fiverr Works EN Subs 16x9.mp4" type="video/mp4">
+        <source src="./How Fiverr Works EN Subs 16x9.mp4" type="video/ogg">
+        Your browser does not support HTML video.
+      </video>
+    </div>
+    </div>
+  </section>
+  <footer class="footer">
+    <div class="footer-container">
+        <div class="footer-section">
+            <h4>About</h4>
+            <ul>
+                <li><a href="#">About Fiverr</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Press</a></li>
+                <li><a href="#">Blog</a></li>
+            </ul>
+        </div>
+        <div class="footer-section">
+            <h4>Support</h4>
+            <ul>
+                <li><a href="#">Help & Support</a></li>
+                <li><a href="#">Trust & Safety</a></li>
+                <li><a href="#">Buying</a></li>
+                <li><a href="#">Selling</a></li>
+            </ul>
+        </div>
+        <div class="footer-section">
+            <h4>Community</h4>
+            <ul>
+                <li><a href="#">Forums</a></li>
+                <li><a href="#">Events</a></li>
+                <li><a href="#">Affiliate Program</a></li>
+                <li><a href="#">Fiverr Contributors</a></li>
+            </ul>
+        </div>
+        <div class="footer-section">
+            <h4>Follow Us</h4>
+            <div class="social-links">
+            <a href="https://www.facebook.com/stvrlightx1"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.instagram.com/sufi.nain/"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/elementorexpert/"><i class="fa fa-linkedin"></i></a>
+            <a href="https://github.com/hasnainalix1"><i class="fa fa-github"></i></a>
+            </div>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <p>&copy; 2024 Fiverr |  All rights reserved | Hasnain Ali</p>
+    </div>
+</footer>
+</body>
+</html>
